--- a/css/main.css
+++ b/css/main.css
@@ -14,16 +14,31 @@ h2, p{
     background: rgba(34, 34, 34, 0.3);
     color: black;
     text-align: center;
-    justify-content: space-between;
-    flex-direction: row-reverse;
+    justify-content: flex-end;
+    flex-direction: row;
 }
 
 .item2{
     list-style: none;
     background: rgba(0, 0, 0, 0.5);
-    width: 120px;
-    height: 120px;
-    border-radius: 120px;
-    margin: 5px;
-    padding: 40px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 25px;
+}
+
+img{
+    border: 3px solid #00e0f0;
+    width: 100%;
+    border-radius: 50%;
+}
+
+img:hover{
+    border: 3px solid #00e0f0;
+    width: 100%;
+    border-radius: 50%;
+    -webkit-transform: scale(1.8);
+    transform: scale(1.8);
+    -webkit-transition: all 0.7s ease;
+    transition: all 0.7s ease;
 }
