--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,17 @@
 main{
     color: #00e0f0;
     font-size: 1.2em;
+    margin: 100px;
 }
 
-h2, p{
+p{
     text-align: center;
-    margin: 80px;
+    padding: 10px;
+    margin-bottom: 100px;
+}
+
+h2{
+    text-align: center;
     padding: 10px;
 }
 
@@ -14,13 +20,24 @@ h2, p{
     background: rgba(34, 34, 34, 0.3);
     color: black;
     text-align: center;
-    justify-content: flex-end;
+    justify-content: center;
+    flex-direction: row;
+}
+
+#contato{
+    margin-top: 100px;
+}
+
+.container3{
+    display: flex;
+    background: rgba(34, 34, 34, 0.3);
+    color: black;
+    text-align: center;
+    justify-content: center;
     flex-direction: row;
 }
 
 .item2{
-    list-style: none;
-    background: rgba(0, 0, 0, 0.5);
     width: 100px;
     height: 100px;
     border-radius: 50%;
