--- a/css/reset.css
+++ b/css/reset.css
@@ -7,5 +7,5 @@
 body{
     background-image: url("../img/pizza-back1.jpg");
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
 }
