--- a/css/main.css
+++ b/css/main.css
@@ -59,3 +59,25 @@ img:hover{
     -webkit-transition: all 0.7s ease;
     transition: all 0.7s ease;
 }
+
+input{
+    list-style: none;
+    background: rgba(0, 0, 0, 0.7);
+    color: white    ;
+    border-radius: 10px;
+    margin: 5px;
+    padding: 5px;
+    align-items: flex-start;
+}
+
+input:hover{
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    list-style: none;
+    background: #00e0f0;
+    border-radius: 10px;
+    margin: 5px;
+    padding: 5px;
+    align-items: flex-start;
+    color: #000;
+}
